# pybind11-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare-build-backend.py  pyproject.toml
src/my_lib/: CMakeLists.txt  __init__.py  conanfile.txt  my_lib.pyi  my_lib_wrapper.cpp  prepare-build-backend.py
src/py_lib/: __init__.py  py_lib.py
test/: test_my_lib.py
